[workspace]
resolver = "2"

members = [
    "libs/*",
    "sanctum-misc-utils",
    "sanctum-solana-test-utils",
    "sanctum-token-ratio",
]

[workspace.package]
license = "MIT OR Apache-2.0"

[workspace.dependencies]
async-trait = ">=0.1"
borsh = { version = ">=0.9", default-features = false } # no_std support
num-traits = ">=0.2"
proptest = "^1"
serde = { version = "^1", default-features = false, features = [
    "derive",
] } # no_std support
serde_json = "^1"
solana-account-decoder = "^1"
solana-program = "^1"
solana-program-test = "^1"
solana-readonly-account = "^1"
solana-sdk = "^1"
spl-associated-token-account = { version = ">=0.1.0", features = [
    "no-entrypoint",
] }
spl-token = { version = ">=0.1.0", features = ["no-entrypoint"] }
spl-token-2022 = { version = ">=0.1.0", features = ["no-entrypoint"] }
