[workspace]
resolver = "2"

members = [
    "generated/*",
    "libs/*",
    "sanctum-misc-utils",
    "sanctum-solana-cli-utils",
    "sanctum-solana-test-utils",
    "sanctum-token-ratio",
]

[workspace.package]
license = "MIT OR Apache-2.0"

[workspace.dependencies]
async-trait = ">=0.1"
bincode = "^1"
borsh = { version = ">=0.9", default-features = false } # no default-features for no_std support
num-derive = ">=0.1"
num-traits = ">=0.1"
proptest = "^1"
serde = { version = "^1", default-features = false, features = [
    "derive",
] } # no default-features for no_std support
serde_json = "^1"
solana-account-decoder = "^1"
solana-clap-utils = "^1"
solana-cli-config = "^1"
solana-client = "^1"
solana-program = "^1"
solana-program-test = "^1"
solana-readonly-account = "^1"
solana-sdk = "^1"
spl-token = { version = ">=0.1.0", features = ["no-entrypoint"] }
spl-token-2022 = { version = ">=0.1.0", features = ["no-entrypoint"] }
thiserror = "^1"

# workspace members
sanctum-solana-test-utils = { path = "./sanctum-solana-test-utils" }
spl_associated_token_account_interface = { path = "./generated/spl_associated_token_account_interface" }
spl_token_interface = { path = "./generated/spl_token_interface" }
stake_program_interface = { path = "./generated/stake_program_interface" }
system_program_interface = { path = "./generated/system_program_interface" }