[workspace]
resolver = "2"

members = [
    "generated/*",
    "libs/*",
    "sanctum-misc-utils",
    "sanctum-solana-cli-utils",
    "sanctum-solana-test-utils",
    "sanctum-solana-client-utils",
    "sanctum-solana-compute-budget-utils",
    "sanctum-stored-account",
    "sanctum-token-ratio",
]

[workspace.package]
license = "MIT OR Apache-2.0"

[workspace.dependencies]
assert_cmd = "^2"
async-trait = ">=0.1"
bincode = "^1"
borsh = { version = ">=0.9", default-features = false } # no default-features for no_std support
chrono-humanize = "^0.2"
clap = ">=3"
data-encoding = "^2"
http-body-util = "^0.1"
hyper = "^1" # not compatible with reqwest version pulled in by solana
hyper-util = "^0.1"
log = "^0.4"
medians = "3.0"
num-derive = ">=0.1"
num-traits = ">=0.1"
proptest = "^1"
serde = { version = "^1", default-features = false, features = [
    "derive",
] } # no default-features for no_std support
serde_json = "^1"
serde_with = "^3"
serde_yaml = ">=0.1"
spl-token = { version = ">=0.1.0", features = ["no-entrypoint"] }
spl-token-2022 = { version = ">=0.1.0", features = ["no-entrypoint"] }
static_assertions = "^1"
tempfile = "^3"
thiserror = "^1"
tokio = "^1"

# solana crates
solana-account-decoder = "^1"
solana-clap-utils = "^1"
solana-cli-config = "^1"
solana-client = "^1"
solana-program = "^1"
solana-program-test = "^1"
solana-readonly-account = "^1"
solana-rpc-client-api = "^1"
solana-sdk = "^1"
solana-version = "^1"

# workspace members
sanctum-solana-cli-utils = { path = "./sanctum-solana-cli-utils" }
sanctum-solana-test-utils = { path = "./sanctum-solana-test-utils" }
spl_associated_token_account_interface = { path = "./generated/spl_associated_token_account_interface" }
spl_stake_pool_interface = { path = "./generated/spl_stake_pool_interface" }
spl_token_interface = { path = "./generated/spl_token_interface" }
stake_program_interface = { path = "./generated/stake_program_interface" }
system_program_interface = { path = "./generated/system_program_interface" }
