[package]
name = "sanctum-solana-cli-utils"
version = "0.4.0"
edition = "2021"
license.workspace = true

[features]
clap = ["dep:clap"]

[dependencies]
async-trait = { workspace = true }
bincode = { workspace = true }
clap2 = { package = "clap", version = "^2.0" } # ^2.0 required for solana-clap-utils
data-encoding = { workspace = true }
solana-clap-utils = { workspace = true }
solana-cli-config = { workspace = true }
solana-client = { workspace = true }
solana-rpc-client-api = { workspace = true }
solana-sdk = { workspace = true }
solana-transaction-status = { workspace = true }

# optional
clap = { workspace = true, features = ["derive"], optional = true }

[dev-dependencies]
clap = { workspace = true, features = ["derive"] }
tokio = { workspace = true }
