[package]
name = "sanctum-solana-test-utils"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/igneous-labs/sanctum-solana-utils.git"

[features]
default = []
proptest = ["dep:proptest"]
stake = []
token = ["spl-token"]
token-2022 = ["spl-token-2022"]

[dependencies]
async-trait = { workspace = true }
borsh = { workspace = true }
num-traits = { workspace = true }
proptest = { workspace = true, optional = true }
serde = { workspace = true }
serde_json = { workspace = true }
solana-account-decoder = { workspace = true }
solana-program = { workspace = true }
solana-program-test = { workspace = true }
solana-readonly-account = { workspace = true, features = ["solana-sdk"] }
solana-sdk = { workspace = true }
spl-token = { workspace = true, optional = true }
spl-token-2022 = { workspace = true, optional = true }