[package]
name = "sanctum-solana-test-utils"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/igneous-labs/sanctum-solana-utils.git"

[features]
default = []
banks-rpc-server = ["dep:http-body-util", "dep:hyper", "dep:hyper-util", "dep:serde_with", "dep:solana-rpc-client-api", "dep:solana-version", "dep:tokio"]
proptest = ["dep:proptest"]
stake = []
token = ["spl-token"]
token-2022 = ["spl-token-2022"]

[dependencies]
async-trait = { workspace = true }
borsh = { workspace = true }
num-traits = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
solana-account-decoder = { workspace = true }
solana-program = { workspace = true }
solana-program-test = { workspace = true }
solana-readonly-account = { workspace = true, features = ["solana-sdk"] }
solana-sdk = { workspace = true }

# optional
http-body-util = { workspace = true, optional = true }
hyper = { workspace = true, features = ["http1", "server"], optional = true }
hyper-util = { workspace = true, features = ["tokio"], optional = true }
proptest = { workspace = true, optional = true }
serde_with = { workspace = true, optional = true }
solana-rpc-client-api = { workspace = true, optional = true }
solana-version = { workspace = true, optional = true }
spl-token = { workspace = true, optional = true }
spl-token-2022 = { workspace = true, optional = true }
tokio = { workspace = true, features = ["net"], optional = true }

[dev-dependencies]
solana-client = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread"] }
