[package]
name = "sanctum-solana-test-utils"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/igneous-labs/sanctum-solana-utils.git"

[features]
default = []
banks-rpc-server = ["dep:http-body-util", "dep:hyper", "dep:hyper-util", "dep:serde_with", "dep:solana-rpc-client-api", "dep:solana-version", "dep:tokio"]
cli = ["dep:assert_cmd", "dep:serde_yaml", "dep:solana-cli-config", "dep:tempfile"]
proptest = ["dep:proptest"]
stake = []
token = ["spl-token"]
token-2022 = ["spl-token-2022"]

[dependencies]
async-trait = { workspace = true }
bincode = { workspace = true }
borsh = { workspace = true }
chrono-humanize = { workspace = true }
data-encoding = { workspace = true }
log = { workspace = true }
num-traits = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
solana-account-decoder = { workspace = true }
solana-program = { workspace = true }
solana-program-test = { workspace = true }
solana-readonly-account = { workspace = true, features = ["solana-sdk", "keyed"] }
solana-sdk = { workspace = true }

# optional
assert_cmd = { workspace = true, optional = true }
http-body-util = { workspace = true, optional = true }
hyper = { workspace = true, features = ["http1", "server"], optional = true }
hyper-util = { workspace = true, features = ["tokio"], optional = true }
proptest = { workspace = true, optional = true }
serde_with = { workspace = true, optional = true }
serde_yaml = { workspace = true, optional = true }
solana-cli-config = { workspace = true, optional = true }
solana-rpc-client-api = { workspace = true, optional = true }
solana-version = { workspace = true, optional = true }
spl-token = { workspace = true, optional = true }
spl-token-2022 = { workspace = true, optional = true }
tempfile = { workspace = true, optional = true }
tokio = { workspace = true, features = ["net"], optional = true }

[dev-dependencies]
sanctum-solana-cli-utils = { workspace = true }
solana-client = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread"] }
