[package]
name = "sanctum-token-ratio"
version = "1.0.0"
edition = "2021"

[features]
default = ["std"]
onchain = ["solana-program", "num-traits", "std"]
std = ["borsh?/std", "serde?/std"]

[dependencies]
borsh = { workspace = true, optional = true }
num-traits = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
solana-program = { workspace = true, optional = true }

[dev-dependencies]
proptest = { workspace = true }
