[package]
name = "sanctum-solana-kcsp"
version = "0.1.0"
edition = "2021"
license.workspace = true

[dependencies]
ark-bn254 = { workspace = true, default-features = false, features = ["curve"] }
ark-ec = { workspace = true }
ark-ff = { workspace = true, default-features = false }
ark-poly = { workspace = true, default-features = false }
sanctum-solana-kcsc = { workspace = true }

[dev-dependencies]
ark-bn254 = { workspace = true, features = ["std"] }
ark-ec = { workspace = true, features = ["std"] }
ark-serialize = { workspace = true }
proptest = { workspace = true }
