[package]
name = "sanctum-associated-token-lib"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/igneous-labs/sanctum-solana-utils.git"

[dependencies]
solana-program = { workspace = true }
solana-readonly-account = { workspace = true }
spl-associated-token-account = { workspace = true }
