[package]
name = "sanctum-spl-stake-pool-lib"
version = "0.1.0"
edition = "2021"
license.workspace = true

[dependencies]
borsh = { workspace = true }
sanctum-token-ratio = { workspace = true, features = ["onchain"] }
solana-program = { workspace = true }
solana-readonly-account = { workspace = true, features = ["keyed"] }
spl_stake_pool_interface = { workspace = true }
