[package]
name = "sanctum-system-program-lib"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/igneous-labs/sanctum-solana-utils.git"

[dependencies]
solana-program = { workspace = true }
solana-readonly-account = { workspace = true }
system_program_interface = { workspace = true }

[dev-dependencies]
bincode = { workspace = true }
proptest = { workspace = true }
sanctum-solana-test-utils = { workspace = true, features = ["proptest"] }