[package]
name = "kzg-general-test"
version = "0.1.0"
edition = "2021"
license.workspace = true

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
ark-bn254 = { workspace = true }
ark-ff = { workspace = true }
sanctum-macros = { workspace = true }
sanctum-solana-kcsc = { workspace = true }
sanctum-solana-kcsov = { workspace = true }
solana-program = { workspace = true }
system_program_interface = { workspace = true }
sanctum-system-program-lib = { workspace = true }

[dev-dependencies]
ark-ff = { workspace = true }
ark-serialize = { workspace = true }
sanctum-solana-test-utils = { workspace = true }
solana-program-test = { workspace = true }
solana-sdk = { workspace = true }
tokio = { workspace = true }
